fixed job url / info getting cleared on page refresh in ATS auditor
